syntax = "proto3";

package rivet.backend.pkg.chat_message.get;

import "proto/common.proto";
import "proto/backend/chat.proto";

message Request {
	repeated rivet.common.Uuid chat_message_ids = 1;
}

message Response {
	repeated rivet.backend.chat.Message messages = 1;
}
